[package]
name = "agenthub"
version = "1.0.0"
description = "AI Agent Terminal Hub"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
russh = "=0.48.0"
russh-keys = "=0.48.0"
async-trait = "0.1"
keyring = "3"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
